--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [ "fs-read-dir", "path-all", "fs-read-file"] }
+tauri = { version = "1.4.0", features = [ "window-unminimize", "window-set-focus", "window-minimize", "window-unmaximize", "window-set-decorations", "window-maximize", "window-set-size", "window-start-dragging", "window-close", "fs-read-dir", "path-all", "fs-read-file"] }
 thiserror = "1.0.47"
 
 [features]
