--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.4.0", features = [ "window-unminimize", "window-set-focus", "window-minimize", "window-unmaximize", "window-set-decorations", "window-maximize", "window-set-size", "window-start-dragging", "window-close", "fs-read-dir", "path-all", "fs-read-file"] }
 thiserror = "1.0.47"
+window-shadows = "0.2.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
