--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = ["window-close", "window-maximize", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-size", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
+tauri = { version = "1.4.0", features = [ "window-set-resizable", "window-set-fullscreen", "window-close", "window-maximize", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-size", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 window-shadows = "0.2.1"
 thiserror = "1.0.48"
 
